# rez-usd-houdini-sidefx

./: CMakeLists.txt  README.md  build.sh  configure.sh  install.sh  package.py
config/: CMakeLists.txt
